--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.3",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
     "tether": "^1.4.7",
     "tslib": "^1.10.0",
