--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "bootstrap": "^4.5.0",
+    "intl": "^1.2.5",
     "jquery": "^3.5.1",
     "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
