--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "intl": "^1.2.5",
     "jquery": "^3.5.1",
     "json-server": "^0.16.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
-    "tether": "^1.4.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -33,9 +33,9 @@
     "@angular/cli": "~9.1.3",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,7 +44,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
